<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Levels</string>
    <string name="title_notifications">Stats</string>

    <string name="title_activity_game_card" translatable="false">GameCardActivity</string>
    <string name="action_settings">Settings</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="title_activity_login" translatable="false">LoginActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>

    <string name="sign_in_title">Sign in or register to continue</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out_short">Sign out</string>
    <string name="action_register_short">Register</string>

    <string name="action_loading">Please wait</string>
    <string name="welcome">Done!</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed. "</string>


    <string name="blitz_title">Training</string>
    <string name="blitz_card">Pattern game</string>
    <string name="blitz_fast">Math game</string>

    <string name="settings_title">Settings</string>

    <string name="challenge_of_the_day">Challenge of the day</string>
    <string name="go">Go!</string>
    <string name="placeholder" translatable="false">placeholder</string>
    <string name="challenge_completed">Challenge completed</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_fields">Please fill in all fields.</string>
    <string name="level_item_difficultytext">Difficulty:</string>
    <string name="go_to_start">Go to start</string>

    <string name="log_out_confirmation">Are you sure?</string>

    <string name="tutorial_step1">Remember the picture!</string>
    <string name="tutorial_step2">Ckick the buttons at the top to choose a fruit you remembered</string>
    <string name="tutorial_step3">To place the picture, click on gray square!</string>

    <string name="stars_half1">You have got </string>
    <string name="stars_half2"> stars out of </string>

    <string name="error_login_server">Internal server error. Try again later. Details: </string>
    <string name="error_login_invalidcredentials">Invalid login credentials. </string>
    <string name="error_login_alreadyexists">User with this email already exists. If you want to log in, click the button below! </string>
    <string name="error_network">No internet connection.</string>

    <string name="training_description">You won\'t earn the stars during training</string>
    <string name="training_warning">Remember that you won\'t earn the stars during training!</string>
    <string name="or">or</string>


</resources>